14-docker-k8/03-app/kubedefs/appdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp-deploy
  labels:
    app: vproapp
spec:
  selector:
    matchLabels:
      app: vproapp
  template:
    metadata:
      labels:
        app: vproapp
    spec:
      containers:
        - name: vproapp
          image: vprocontainers/vprofileapp
          imagePullPolicy: Always
          ports:
            - name: vproapp-port
              containerPort: 8080
