14-docker-k8/03-app/kubedefs/mcdep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpromc-deploy
  labels:
    app: vpromc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpromc
  template:
    metadata:
      labels:
        app: vpromc
    spec:
      containers:
        - name: vpromc
          image: memcached:latest
          ports:
            - name: vpromc-port
              containerPort: 11211
