14-docker-k8/03-app/kubedefs/appservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vproapp-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: vproapp-port
  selector:
    app: vproapp
  type: ClusterIP
