14-docker-k8/03-app/kubedefs/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprodb
spec:
  selector:
    app: vprodb
  ports:
    - port: 3306
      targetPort: mysql-port
      protocol: TCP
  type: ClusterIP
